# 2023_1_OND

./: .gitignore  CMakeLists.txt  README.md
Header files/: database.h
Logic/: CMakeLists.txt
Logic/include/: audio.h  clienttcp.h  controller.h  iclienttcp.h  icontroller.h  playerrunner.h  questionmodel.h  recorderrunner.h
Logic/src/: audio.cpp  clienttcp.cpp  controller.cpp  iclienttcp.cpp  playerrunner.cpp  questionmodel.cpp  recorderrunner.cpp
Source files/: answerMethods.cpp  functions.cpp  questionMethods.cpp  userMethods.cpp
Tests/: testAnswersMethods.cpp  testQuestionMethods.cpp  testUserMethods.cpp
include/: read_tokens.hpp
lib/client/build-ui-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: qtcsettings.cmake
lib/client/include/: api.hpp
lib/client/src/: festival.cpp  sphinx.cpp
lib/client/ui/: CMakeLists.txt
lib/client/ui/YourVoice/: .gitignore  CMakeLists.txt  YourVoice.pro  authwindow.cpp  authwindow.h  authwindow.ui  devwindow.cpp  devwindow.h  devwindow.ui  guestmainwindow.cpp  guestmainwindow.h  guestmainwindow.ui  main.cpp  regwindow.cpp  regwindow.h  regwindow.ui
lib/client/ui/YourVoice/img/: img.qrc
lib/client/ui/build-YourVoice-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  logo.icns  qtcsettings.cmake
lib/client/ui/build-YourVoice-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.cmake/api/v1/reply/: cache-v2-f2b23896a2dc6c13e620.json  cmakeFiles-v1-22262565b06fc3920ce6.json  cmakeFiles-v1-44a137927aa028da2368.json  codemodel-v2-e7056dc1171cfb02e54c.json  directory-.-Debug-b4aa754d3f37d61dfa1a.json  index-2023-05-15T21-07-41-0672.json  index-2023-05-15T23-09-06-0748.json  target-YourVoice-Debug-0fbc526ec4e2df35bb35.json  target-YourVoice-Debug-545c48ce417654d55b45.json  target-YourVoice_autogen-Debug-b38176b069821ebe2047.json  target-YourVoice_autogen_timestamp_deps-Debug-bce4fe649291cff239b1.json
lib/client/ui/build-YourVoice-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-dca954bd5d853d3b8afe.json  index-2023-05-13T20-54-46-0330.json
lib/client/ui/build-YourVoice-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qt/: QtDeploySupport.cmake
lib/client/ui/build-YourVoice-Desktop_x86_darwin_generic_mach_o_64bit-Debug/YourVoice.app/Contents/: Info.plist
lib/client/ui/build-YourVoice-Desktop_x86_darwin_generic_mach_o_64bit-Debug/YourVoice.app/Contents/MacOS/: YourVoice
lib/client/ui/build-YourVoice-Desktop_x86_darwin_generic_mach_o_64bit-Debug/YourVoice_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
lib/client/ui/build-YourVoice-Desktop_x86_darwin_generic_mach_o_64bit-Debug/YourVoice_autogen/EWIEGA46WW/: moc_guestmainwindow.cpp  moc_guestmainwindow.cpp.d
lib/client/ui/build-YourVoice-Desktop_x86_darwin_generic_mach_o_64bit-Debug/YourVoice_autogen/include/: ui_guestmainwindow.h
lib/client/ui/build-YourVoice-Qt_6_5_1_for_macOS-Debug/: .qmake.stash
lib/client_http/: CMakeLists.txt
lib/client_http/include/: client_http.hpp
lib/client_http/src/: client_http.cpp
lib/server/: CMakeLists.txt
lib/server/include/: api.hpp  gpt_stream.hpp  handler.hpp  interface_db.hpp  interfaces.hpp  package.hpp  serve_mux.hpp  server.hpp  session.hpp  ssl.hpp
lib/server/src/: api.cpp  chat_gpt.cpp  gpt_stream.cpp  handler.cpp  handler_ask.cpp  serve_mux.cpp  server-tcp.cpp  session.cpp  sphinx.cpp  text_to_speech.cpp  vk_asr.cpp  vk_tts.cpp  yandex_tts.cpp
lib/server/tests/: CMakeLists.txt  festivaltest.cpp  sphinxtest.cpp
lib/server/tests/include/: head.hpp
lib/server/tests/src/: chat_gpt.cpp  handler_test.cpp  serve_mux.cpp  test.cpp
src/: main.cpp  read_tokens.cpp
